--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
          url("../GlacialIndifference-Italic.otf");
 }
 @font-face {
-    font-family: 'Ethnocentric';
-    src: url("../ethnocentric-rg.otf"),
-         url("../ethnocentric-rg-it.otf");
+    font-family: 'Amsterdam';
+    src: url("../.otf"),
+         url("../-it.otf");
 }
 *{
     margin: 0;
@@ -696,10 +696,10 @@ swiper-slide.swiper1 {
     gap: 16px;
     align-items: center;
     margin-bottom: 32px;
-    font-family: 'Ethnocentric';
-    font-size: 56px;
-    font-weight: 400;
-    line-height: 120%; /* 67.2px */
+    font-family: "Glacial Indifference";
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 100%;
     text-transform: uppercase;
 }
 .ig-embed iframe{
@@ -975,9 +975,8 @@ form button:hover{
 .popuptest{
     display: flex;
     flex-direction: column;
-    background-color: #000;
     padding: 200px 0 100px;
-    gap: 32px;
+    gap: 39px;
 }
 .popup .content{
     position: relative;
@@ -991,45 +990,32 @@ form button:hover{
     z-index: 1;
     gap: 30px;
     text-align: center;
-    color: #CAAA57;
+    color: #fff;
 }
-.title{
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-/* .popupimg{
+.popupimg{
     width: 100%;
-    padding-left: 10%;
-    float: right;
-} */
-.popup .content h1{
-    display: flex;
-    flex-direction: column;
-    font-family: 'Ethnocentric';
-    font-size: 56px;
+    max-width: 1000px;
+    margin: auto;
+}
+.popup .content h1{    
+    font-family: 'Cinzel';
+    font-size: 73.739px;
+    font-weight: 700;
+    line-height: 90%; /* 66.365px */
+    text-transform: uppercase;
+}
+.popup .content span{
+    font-family: 'Amsterdam';
+    font-size: 64.522px;
     font-weight: 400;
     line-height: 120%;
 }
 .popup .content p{
-    max-width: 430px;
+    max-width: 550px;
     font-family: "Glacial Indifference";
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
-    line-height: 150%;
-    color: #FFF;
-}
-.callpopup{
-    border-radius: 100px;
-    background: #CAAA57;
-    max-width: 150px;
-    margin: auto;
-}
-.callpopup a{    
-    color: #000;
-    font-size: 16px;
-    font-weight: 800;
-    line-height: 150%; 
+    line-height: 130%;
 }
 /*
 .swiperpop{
