--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 }
 @font-face {
     font-family: 'Amsterdam';
-    src: url("../.otf"),
-         url("../-it.otf");
+    src: url("../amsterdam-four-ttf.ttf"),
 }
 *{
     margin: 0;
@@ -178,6 +177,42 @@ swiper-container{
     right: 0;
     object-fit: cover;
 }
+.posterimgbg::before{
+    content: '';
+    position: absolute;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.45));
+}
+.posterimginfos{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    color: #FFF;
+    text-align: center;
+    z-index: 9999;
+    right: 0%;
+    top: 50%;
+    transform: translate(-100%, -50%);
+}
+.posterimginfos h1{
+    font-family: 'Cinzel';
+    font-size: 73.739px;
+    font-weight: 700;
+    line-height: 90%; /* 66.365px */
+    text-transform: uppercase;
+    background: var(--silver, linear-gradient(90deg, #8E8E8E 0%, #D9D9D9 68.5%, #B4B4B4 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.posterimginfos h2{
+    font-family: 'Amsterdam';
+    font-size: 64.522px;
+    font-weight: 400;
+    line-height: 120%; 
+    margin-top: -40px;
+    margin-bottom: 30px;
+}
 .posterinfos img{
     max-width: 200px;
     z-index: 999;
@@ -220,6 +255,7 @@ swiper-slide.swiper1 {
 }
 .firstswip ul li{list-style: none}
 @media screen and (max-width:950px) {
+    .posterinfos img{max-width: 180px;}
     .poster{
         flex-direction: column;
         text-align: center;
@@ -231,6 +267,13 @@ swiper-slide.swiper1 {
         width: 100%;    
         align-items: center;
         margin-bottom: 30px;
+    }
+    .posterimgbg{
+        position: relative;
+        width: 100%;    
+        max-width: 900px;
+        margin: auto;
+        object-fit: cover;
     }
     .postercontainer video{
         position: relative;
@@ -308,8 +351,8 @@ swiper-slide.swiper1 {
     cursor: grab;
     margin: auto !important;
 }
-.mySwiper:host{
-    --swiper-theme-color: #fff;
+.mySwiper2:host{
+    --swiper-theme-color: #000;
 }
 .swiper2 {
   display: flex;
@@ -323,6 +366,7 @@ swiper-slide.swiper1 {
   margin-left: 15px;
   overflow: hidden;
     border: 1px solid #000;
+    margin-bottom: 40px;
 }
 .swiper2 img {
   width: 100% !important;
@@ -345,7 +389,10 @@ swiper-slide.swiper1 {
 .bgservcar{
     display: block;
     position: absolute;
+    width: 100%;
+    height: 150px;
     object-fit: cover;
+    object-position: right;
     justify-content: center;
     width: 100%;
     border-bottom-left-radius: 16px;
