--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
 @font-face {
     font-family: 'Glacial Indifference';
-    src: url("../GlacialIndifference-Regular.otf"),
-         url("../GlacialIndifference-Bold.otf"),
-         url("../GlacialIndifference-Italic.otf");
+    src: url("../GlacialIndifference-Regular.otf");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Glacial Indifference Bold';
+    src: url("../GlacialIndifference-Bold.otf");;
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Glacial Indifference Italic';
+    src: url("../GlacialIndifference-Italic.otf");
 }
 @font-face {
     font-family: 'Amsterdam';
@@ -108,7 +118,7 @@ swiper-container{
     background: linear-gradient(111deg, #585656 0%, #000 44.79%, #585656 96.32%);
 }
 .about h1, .reviewstitle h3, .gallerytitle h3,.formgrid h2, .abouttitle h1, .abouttext h2, .mapsinfos h2{
-    font-family: "Glacial Indifference";
+    font-family: "Glacial Indifference Bold";
     font-size: 32px;
     font-weight: 700;
     line-height: 100%; /* 32px */
@@ -170,12 +180,6 @@ swiper-container{
         gap: 70px;
     }
 } */
-.posterinfos{
-    display: flex;
-    flex-direction: column;
-    gap: 24px;
-    justify-content: center;
-}
 /* .postercontainer video{
     position: absolute;
     display: block;
@@ -185,6 +189,12 @@ swiper-container{
     border-bottom-left-radius: 30px;
     right: 0;
 } */
+.posterinfos{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    justify-content: center;
+}
 .posterimgbg{
     position: absolute;
     display: block;
@@ -205,6 +215,26 @@ swiper-container{
     right: 0%;
     top: 50%;
     transform: translate(-100%, -50%);
+}
+@media screen and (max-width:1690px) {
+    .posterimginfos{
+        transform: translate(-70%, -50%);
+    }    
+}
+@media screen and (max-width:1490px) {
+    .posterimginfos{
+        transform: translate(-50%, -54%);
+    }    
+}
+ @media screen and (max-width:1290px) {
+    .posterimginfos{
+        transform: translate(-20%, -54%);
+    }    
+}
+@media screen and (max-width:1090px) {
+    .posterimginfos{
+        transform: translate(-10%, -60%);
+    }    
 }
 .posterimginfos h1{
     font-family: 'Cinzel';
@@ -328,7 +358,7 @@ swiper-slide.swiper1 {
 .servicestitle .small{margin: auto;}
 .servicestitle h2{
     color: #000;
-    font-family: "Glacial Indifference";
+    font-family: "Glacial Indifference Bold";
     font-size: 32px;
     font-weight: bolder;
     line-height: 100%; /* 32px */
@@ -546,7 +576,7 @@ swiper-slide.swiper1 {
     margin: auto;
 }
 .reviewstitle h3{
-    max-width: 290px;
+    max-width: 320px;
 }
 .imbvw{
     height: 100%;
@@ -656,7 +686,6 @@ swiper-slide.swiper1 {
 }
 .ig-embed h2{
     display: flex;
-    flex-direction: column;
     margin: auto;
     gap: 16px;
     align-items: center;
