--- a/css/style.css
+++ b/css/style.css
@@ -154,55 +154,39 @@ swiper-container{
 }
 .poster{
     display: flex;
+    justify-content: space-between;
     width: 100%;
-    max-width: 1100px;
-    padding: 0 50px;
+    max-width: 1500px;
+    padding: 0 0 0 50px;
     margin: auto;
-    height: 34.5vw;
 }
-/*@media screen and (max-width:1700px) {
-    .poster{
-        gap: 323px;
-    }
-}
-@media screen and (max-width:1500px) {
-    .poster{
-        gap: 250px;
-    }
-}
-@media screen and (max-width:1300px) {
-    .poster{
-        gap: 150px;
-    }
-}
-@media screen and (max-width:1200px) {
-    .poster{
-        gap: 70px;
-    }
-} */
-/* .postercontainer video{
-    position: absolute;
-    display: block;
-    max-width: 61vw;    
-    z-index: 999;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    right: 0;
-} */
 .posterinfos{
     display: flex;
     flex-direction: column;
     gap: 24px;
+    padding: 100px 0;
     justify-content: center;
 }
-.posterimgbg{
-    position: absolute;
+.posterimgbg {
     display: block;
-    max-width: 50vw;   
-    height: 100%; 
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    max-width: 60vw;
+    object-fit: cover;
+    object-position: bottom;
+    -o-object-position: bottom;
     z-index: 999;
     right: 0;
-    object-fit: cover;
+    top: 0;
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.70) 0%, rgba(0, 0, 0, 0.90) 100%);
+    width: 100%;
+    height: 100%;
 }
 .posterimginfos{
     position: absolute;
@@ -213,29 +197,16 @@ swiper-container{
     text-align: center;
     z-index: 9999;
     right: 0%;
-    top: 50%;
-    transform: translate(-100%, -50%);
+    transform: translateX(-50%);
 }
-@media screen and (max-width:1690px) {
-    .posterimginfos{
-        transform: translate(-70%, -50%);
-    }    
+.posterimg{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 100vw;
+    margin: auto;
 }
-@media screen and (max-width:1490px) {
-    .posterimginfos{
-        transform: translate(-50%, -54%);
-    }    
-}
- @media screen and (max-width:1290px) {
-    .posterimginfos{
-        transform: translate(-20%, -54%);
-    }    
-}
-@media screen and (max-width:1090px) {
-    .posterimginfos{
-        transform: translate(-10%, -60%);
-    }    
-}
+.posterimginfos h2, .posterimginfos h1{z-index: 9999;}
 .posterimginfos h1{
     font-family: 'Cinzel';
     font-size: 73.739px;
@@ -256,7 +227,7 @@ swiper-container{
     margin-bottom: 30px;
 }
 .posterinfos img{
-    max-width: 200px;
+    width: 350px;
     z-index: 999;
 }
 .posterinfos ul{
@@ -296,7 +267,12 @@ swiper-slide.swiper1 {
     border-radius: 0;
 }
 .firstswip ul li{list-style: none}
-@media screen and (max-width:950px) {
+@media screen and (max-width:1350px) {
+    .posterinfos img{
+        width: 300px;
+    }
+}
+@media screen and (max-width:1150px) {
     .posterinfos img{max-width: 180px;}
     .poster{
         flex-direction: column;
@@ -307,8 +283,9 @@ swiper-slide.swiper1 {
     }
     .posterimg{display:flex;flex-direction: column;gap: 30px;}
     .posterimginfos{
-        position: relative;
-        transform: none;        
+        right: 50%;
+        bottom: 0%;
+        transform: translate(50%, -50%);
     }
     .posterimginfos h1{
         font-size: 56px;
@@ -320,22 +297,24 @@ swiper-slide.swiper1 {
         flex-direction: column;
         width: 100%;    
         align-items: center;
-        margin-bottom: 30px;
     }
     .posterimgbg{
         position: relative;
         width: 100%;    
-        max-width: 900px;
+        max-width: 100vw;
         margin: auto;
         object-fit: cover;
+        height: 400px;
     }
-    .postercontainer video{
-        position: relative;
-        width: 100%;    
-        max-width: 900px;
-        margin: auto;
-        object-fit: cover;
-        border-radius: 30px;
+    .overlay {
+        position: absolute;
+        top: 515px;
+        z-index: 9999;
+        left: 0;
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.70) 0%, rgba(0, 0, 0, 0.90) 100%);
+        width: 100%;
+        height: 400px;
+        bottom: 0;
     }
 } 
 .servicescontainer{
