--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ swiper-slide.swiper1 {
         top: 510px;
         z-index: 9999;
         left: 0;
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
+        background: none;
         width: 100%;
         height: 400px;
         bottom: 0;
