--- a/css/footer.css
+++ b/css/footer.css
@@ -81,8 +81,10 @@ footer{
     font-weight: 600;
 }
 .footernav ul li a:hover {
-    /* color: #000; */
-    transition: 0.2s;
+    background: -webkit-linear-gradient(90deg, #8E8E8E 0%, #D9D9D9 68.5%, #B4B4B4 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: 0.1s;
 }
 .address{
     width: 100%;
