--- a/css/style.css
+++ b/css/style.css
@@ -198,15 +198,17 @@ swiper-container{
     color: #FFF;
     text-align: center;
     z-index: 9999;
-    right: 0%;
+    left: 50%;
     transform: translateX(-50%);
 }
 .posterimg{
     display: flex;
     align-items: center;
     width: 100%;
-    max-width: 100vw;
-    margin: auto;
+    width:50vw;
+    position: absolute;
+    top: 50%;
+    right: 0;
 }
 .posterimginfos h2, .posterimginfos h1{z-index: 9999;}
 .posterimginfos h1{
@@ -284,14 +286,25 @@ swiper-slide.swiper1 {
         text-align: center;
         padding: 0;
         height: 100%;
-        padding-top: 70px;
+        padding-top: 7px;
     }
-    .posterimg{display:flex;flex-direction: column;gap: 30px;}
+    .posterimg{
+        position: relative;
+        display:flex;
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+        margin-bottom: -340px;
+        width: 100vw;
+    }
     .posterimginfos{
-        right: 50%;
-        bottom: 0%;
-        transform: translate(50%, 130%);
+        position: relative;
+        left: 0;
+        right: 0;
+        top: 0;
+        transform: none;
         z-index: 99999;
+        align-items: center;
     }
     .posterimginfos h1{
         font-size: 56px;
@@ -303,6 +316,7 @@ swiper-slide.swiper1 {
         flex-direction: column;
         width: 100%;    
         align-items: center;
+        padding: 70px 0 150px;
     }
     .posterimgbg{
         position: relative;
@@ -314,12 +328,12 @@ swiper-slide.swiper1 {
     }
     .overlay {
         position: absolute;
-        top: 510px;
+        top: 418px;
         z-index: 9999;
         left: 0;
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
         width: 100%;
-        height: 400px;
+        height: 405px;
         bottom: 0;
     }
 } 
@@ -657,10 +671,13 @@ swiper-slide.swiper1 {
     .mySwiper3{
         height: 100%;
     }
-    .swiper3 img , .swiper3{
+    .swiper3 img {
         width: 100%;
         object-fit: cover;
         max-width: 100%;
+    }
+    .mySwiper3{
+        padding: 0 10vw;
     }
     .swiper3{
         margin-bottom: 30px;
