--- a/css/style.css
+++ b/css/style.css
@@ -151,22 +151,31 @@ swiper-container{
 } */
 .postercontainer{
     margin-top: 80px;
+    padding-top: 620px;
+    height: 700px;
 }
 .poster{
     position: relative;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    max-width: 1500px;
-    padding: 0 0 0 50px;
-    margin: auto;
+    width:50vw;
+    position: absolute;
+    top: 50%;
+    left: 0;
 }
 .posterinfos{
+    padding: 100px 0;
+    justify-content: center;
+    position: absolute;
     display: flex;
     flex-direction: column;
     gap: 24px;
-    padding: 100px 0;
-    justify-content: center;
+    color: #FFF;
+    text-align: center;
+    z-index: 9999;
+    left: 50%;
+    transform: translateX(-50%);
 }
 .posterimgbg {
     display: block;
@@ -280,14 +289,28 @@ swiper-slide.swiper1 {
     }
 }
 @media screen and (max-width:1150px) {
-    .posterinfos img{max-width: 180px;}
     .poster{
-        flex-direction: column;
-        text-align: center;
-        padding: 0;
-        height: 100%;
-        padding-top: 7px;
+        position: absolute;
+        width: 100%;
+        top: 0;
     }
+    .posterinfos{
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+        color: #FFF;
+        text-align: center;
+        z-index: 9999;
+        left: 50%;
+        top: -230px;
+        transform: translate(-50%, 50%);
+    }
+    .postercontainer{
+        margin-top: 80px;
+        padding-top: 520px;
+        height: 700px;
+    }
+    .posterinfos img{max-width: 180px;}
     .posterimg{
         position: relative;
         display:flex;
@@ -296,6 +319,7 @@ swiper-slide.swiper1 {
         align-items: center;
         margin-bottom: -340px;
         width: 100vw;
+        top: 0;
     }
     .posterimginfos{
         position: relative;
@@ -303,7 +327,7 @@ swiper-slide.swiper1 {
         right: 0;
         top: 0;
         transform: none;
-        z-index: 99999;
+        z-index: 9999;
         align-items: center;
     }
     .posterimginfos h1{
@@ -311,12 +335,6 @@ swiper-slide.swiper1 {
     }
     .posterimginfos h2{
         font-size: 48px;
-    }
-    .posterinfos{
-        flex-direction: column;
-        width: 100%;    
-        align-items: center;
-        padding: 70px 0 150px;
     }
     .posterimgbg{
         position: relative;
@@ -328,8 +346,8 @@ swiper-slide.swiper1 {
     }
     .overlay {
         position: absolute;
-        top: 375px;
-        z-index: 9999;
+        top: 420px;
+        z-index: 999;
         left: 0;
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
         width: 100%;
@@ -477,7 +495,7 @@ swiper-slide.swiper1 {
 }
 @media screen and (max-width:990px) {
     .servicestitle{
-        padding: 70px 10px 50px;
+        padding: 170px 10px 50px;
     }
 }
 .aboutcontainer{
