--- a/css/style.css
+++ b/css/style.css
@@ -132,23 +132,14 @@ swiper-container{
     line-height: 130%;
     margin: auto;
 }
-/* @media screen and (max-width:900px) {
+@media screen and (max-width:900px) {
     .about h1, .reviewstitle h3, .gallerytitle h3,.formgrid h2, .abouttitle h1, .abouttext h2, .mapsinfos h2{
-        font-family: "Glacial Indifference";
-        font-size: 32px;
-        font-weight: 700;
-        line-height: 100%; 
-        margin: auto;
-        text-transform: uppercase;
+        font-size: 24px;
     }
     .about p, .reviewstitle p, .gallerytitle p,.formgrid p, .abouttitle p, .abouttext p, .mapsinfos p{
-        font-family: "Glacial Indifference";
         font-size: 14px;
-        font-weight: 400;
-        line-height: 130%;
-        margin: auto;
     }    
-} */
+}
 .postercontainer{
     margin-top: 80px;
     padding-top: 620px;
@@ -289,6 +280,10 @@ swiper-slide.swiper1 {
     }
 }
 @media screen and (max-width:1150px) {
+    .firstswip{
+        position: absolute;
+        top: 350px;
+    }
     .poster{
         position: absolute;
         width: 100%;
@@ -302,7 +297,7 @@ swiper-slide.swiper1 {
         text-align: center;
         z-index: 9999;
         left: 50%;
-        top: -230px;
+        top: -280px;
         transform: translate(-50%, 50%);
     }
     .postercontainer{
@@ -515,7 +510,7 @@ swiper-slide.swiper1 {
     color: #FFF;
 }
 .abouttitle{
-    max-width: 660px;
+    max-width: 560px;
 }
 .abouttitle p{
     max-width: 570px;
@@ -608,7 +603,7 @@ swiper-slide.swiper1 {
 }
 @media screen and (max-width:990px) {
     .aboutcontainer{
-        padding: 120px 10px;
+        padding: 50px 10px;
     }
     .preferencegrid{
         flex-direction: column;
@@ -689,13 +684,17 @@ swiper-slide.swiper1 {
     .mySwiper3{
         height: 100%;
     }
+    .swiper3 {
+      max-width: 400px;
+    }
     .swiper3 img {
+      max-width: 340px;
         width: 100%;
         object-fit: cover;
         max-width: 100%;
     }
     .mySwiper3{
-        padding: 0 10vw;
+        padding: 0 3vw;
     }
     .swiper3{
         margin-bottom: 30px;
@@ -741,9 +740,12 @@ swiper-slide.swiper1 {
     }    
 }
 @media screen and (max-width:580px) {
+    .ig-embed{
+        padding: 30px 0 30px;
+    }
     .ig-embed iframe{
         width:100%;
-        max-width: 300px; 
+        max-width: 380px; 
         height: 450px;
     }    
 }
@@ -846,7 +848,7 @@ form button{
     border:1px solid #000
 }
 form button:hover{
-    background-color: #CAAA57;
+    background-color: #000;
     color: #FFF;
     border:1px solid #fff
 }
@@ -1096,7 +1098,9 @@ a{
     color: #000;
 }
 .servicesbtn:hover{
-    background: linear-gradient(86deg, #515151 0%, #9F9F9F 46.44%, #858585 100%);
+    /* background: linear-gradient(86deg, #515151 0%, #9F9F9F 46.44%, #858585 100%); */
+    background-color: #000;
+    color: #fff;
     border: none
 }
 .swiper2:hover {
